--- a/PopAccessToMethods_CheckAll.Rmd
+++ b/PopAccessToMethods_CheckAll.Rmd
@@ -29,7 +29,7 @@ suppressMessages(library(stringi))
 ```{r dtaSDP}
 #Survey-level link summary data, constructed from Stata
 dtaSDP<-read.csv("summary_Access_Indicators_SR.csv")%>%
-    #filter(xsurvey!="NENiameyR5" & xsurvey!="BFR6" & xsurvey!="NGKanoR3")%>%
+    filter(xsurvey!="NENiameyR5" & xsurvey!="BFR6" & xsurvey!="NGKanoR3")%>%
     #filter(country!="Niger, Niamey" & country!="Nigeria, Lagos" & country!="Nigeria, Kano" & country!="India, Rajasthan")%>%
     group_by(country)%>%
     mutate(latest=round==max(round))%>%
@@ -58,8 +58,8 @@ length(unique(dtaSDP$xsurvey))
 ```
 
 ```{r dtaIR}
-dtaIR<-data.frame(read_csv("summary_Access_Indicators_IR.csv"))%>%
-    #filter(xsurvey!="NENiameyR5" & xsurvey!="BFR6" & xsurvey!="NGKanoR3")%>%
+dtaIR<-data.frame(read_csv("summary_Access_Indicators_IR_PopAccessToMethods.csv"))%>%
+    filter(xsurvey!="NENiameyR5" & xsurvey!="BFR6" & xsurvey!="NGKanoR3")%>%
     #filter(country!="Niger, Niamey" & country!="Nigeria, Lagos" & country!="Nigeria, Kano" & country!="India, Rajasthan")%>%
     filter(year<=2018)%>%
     mutate(month = ifelse(month==0, 12, month), 
@@ -105,7 +105,7 @@ This presents women's access to a set of contraceptive methods at SDPs that serv
      4. All five methods currently available + no stock out in the past 3 months for any of the five methods + SDP is _"ready" to insert and remove_ IUD and Implants
 
 * __<span style="color: orange;">Orange bars/lines</span>__: __percent of SDPs__ with the methods.   
-* __<span style="color: blue;">Blue bars/lines</span>__: __percent of women__ who has geographic/administrative access to SDPs with the methods.    
+* __<span style="color: blue;">Blue bars/lines</span>__: __percent of women__ who has geographic/administrative access to SDPs with the methods: __population-based access to methods__.    
 
 See Annexes for more info on the background and methods. 
 
@@ -123,10 +123,15 @@ Interpretation example: In Kenya PMA 2018,
 
 _(NOTE: Population-level estimates are higher, because as long as the community is served by at least one SDPs with the methods - out of roughly 3+ SDPs that are linked to the community - women are considered having access.)_      
 
-```{r plotlevel, results='asis', fig.align="left", out.width="900px", out.height="700px"}
+__<span style="color: red;">Among all/any SDPs</span>__
+```{r plotlevelAll, results='asis', fig.align="left", out.width="900px", out.height="700px"}
 ############### SDP
 panel <- . %>% 
-    plot_ly(x=~year, y=~essential5_curav, type = 'bar', 
+    plot_ly(x=~round, y=~essential5_offer, type = 'bar', 
+                name = "offer 5 specific methods*",
+                marker = list(color = '#fdd0a2'),
+                text = ~essential5_offer, textfont = list(size = 10) , textposition = 'outside') %>%
+    add_trace(y=~essential5_curav, type = 'bar', 
                 name = "5 specific methods* available currently",
                 marker = list(color = '#fdae6b'),
                 text = ~essential5_curav, textfont = list(size = 10) , textposition = 'outside') %>%
@@ -155,7 +160,7 @@ panel <- . %>%
         showlegend = FALSE
         )
 
-dtafig<-dtaSDP%>%filter(latest==TRUE)
+dtafig<-dtaSDP%>%filter(group=="All")%>%filter(latest==TRUE)
 
 fig1<-dtafig%>%
     group_by(country) %>%
@@ -165,10 +170,14 @@ fig1<-dtafig%>%
 
 ############### IR
 panel <- . %>% 
-    plot_ly(x=~year, y=~SDPall_essential5_curav, type = 'bar', 
+    plot_ly(x=~year, y=~SDPall_essential5_offer, type = 'bar', 
+                name = "Offer 5 specific methods*",
+                marker = list(color = '#9ecae1'),
+                text = ~SDPall_essential5_offer, textfont = list(size = 10) , textposition = 'outside') %>%
+    add_trace(y=~SDPall_essential5_curav, type = 'bar', 
                 name = "5 specific methods* available currently/3-month",
                 marker = list(color = '#6baed6'),
-                text = ~SDPall_essential5_curav, textfont = list(size = 10) , textposition = 'outside') %>%
+                text = ~SDPall_essential5_curav, textfont = list(size = 10) , textposition = 'outside') %>%    
     add_trace(y = ~SDPall_essential5_noso, type = 'bar', 
                 name = "5 specific methods* available currently/3-month",
                 marker = list(color = '#4292c6'),
@@ -211,27 +220,131 @@ subplot(fig1, fig2, nrows=1, titleY = TRUE, margin = 0.05) %>%
             yaxis = list(range = c(0, 110), tickfont = list(size=8)) )
 ```
 
+__<span style="color: red;">Excluding hospitals: this makes sense for only select countries - probably Burkina Faso, Ethiopia, India/Rajasthan, and Uganda</span>__
+```{r plotlevel, results='asis', fig.align="left", out.width="900px", out.height="700px"}
+############### SDP
+panel <- . %>% 
+    plot_ly(x=~year, y=~essential5_offer, type = 'bar', 
+                name = "offer 5 specific methods*",
+                marker = list(color = '#fdd0a2'),
+                text = ~essential5_offer, textfont = list(size = 10) , textposition = 'outside') %>%
+    add_trace(y=~essential5_curav, type = 'bar', 
+                name = "5 specific methods* available currently",
+                marker = list(color = '#fdae6b'),
+                text = ~essential5_curav, textfont = list(size = 10) , textposition = 'outside') %>%
+    add_trace(y = ~essential5_noso, 
+                name = "5 specific methods* available currently/3-month",
+                marker = list(color = '#fd8d3c'),
+                text = ~essential5_noso, textfont = list(size = 10) , textposition = 'outside') %>% 
+    add_trace(y = ~essential5_ready, 
+                name = "Currently ready** to provide 5 specific methods*", 
+                marker = list(color = '#f16913'),
+                text = ~essential5_ready, textfont = list(size = 10) , textposition = 'outside') %>% 
+    add_trace(y = ~essential5_rnoso, 
+                name = "Meeting both conditions", 
+                marker = list(color = '#d94801'),
+                text = ~essential5_rnoso, textfont = list(size = 10) , textposition = 'outside') %>%     
+    add_annotations(
+        text = ~unique(country),
+        x = 0.5, y = 0.95, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "bottom", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%
+    layout(
+        yaxis = list(title = "Percent of SDPs",
+                             range = c(0, 110), tickfont = list(size=8)),
+        xaxis = list(title = "Survey year", tickfont = list(size=8)), 
+        showlegend = FALSE
+        )
+
+dtafig<-dtaSDP%>%filter(group=="Excluding hospitals")%>%filter(latest==TRUE)
+
+fig1<-dtafig%>%
+    group_by(country) %>%
+    do(p = panel(.)) %>%
+    subplot(nrows = 4, shareY = FALSE)%>%
+    layout(showlegend = FALSE)
+
+############### IR
+panel <- . %>% 
+    plot_ly(x=~year, y=~SDPlow_essential5_offer, type = 'bar', 
+                name = "Offer 5 specific methods*",
+                marker = list(color = '#9ecae1'),
+                text = ~SDPlow_essential5_offer, textfont = list(size = 10) , textposition = 'outside') %>%
+    add_trace(y=~SDPlow_essential5_curav, type = 'bar', 
+                name = "5 specific methods* available currently/3-month",
+                marker = list(color = '#6baed6'),
+                text = ~SDPlow_essential5_curav, textfont = list(size = 10) , textposition = 'outside') %>%
+    add_trace(y = ~SDPlow_essential5_noso, type = 'bar', 
+                name = "5 specific methods* available currently/3-month",
+                marker = list(color = '#4292c6'),
+                text = ~SDPlow_essential5_noso, textfont = list(size = 10) , textposition = 'outside') %>%    
+    add_trace(y = ~SDPlow_essential5_ready, 
+                      name = "Currently ready** to provide 5 specific methods*", 
+                      marker = list(color = '#2171b5'),
+                      text = ~SDPlow_essential5_ready, textfont = list(size = 10) , textposition = 'outside') %>% 
+    add_trace(y = ~SDPlow_essential5_rnoso, 
+                      name = "Meeting both conditions", 
+                      marker = list(color = '#084594'),
+                      text = ~SDPlow_essential5_rnoso, textfont = list(size = 10) , textposition = 'outside') %>%     
+    add_annotations(
+        text = ~unique(country),
+        x = 0.5, y = 0.95, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "bottom", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%
+    layout(
+        yaxis = list(title = "Percent of all women with service environment***",
+                             range = c(0, 110), tickfont = list(size=8)),
+        xaxis = list(title = "Survey year", tickfont = list(size=8)),
+        
+        showlegend = FALSE
+        )
+
+dtafig<-dtaIR%>%
+    filter(group=="All" & latestIRLINK==1)%>%
+    filter(is.na(SDPlow_essential5_noso)==FALSE)
+
+fig2<-dtafig%>%
+    group_by(country) %>%
+    do(p = panel(.)) %>%
+    subplot(nrows = 4, shareY = FALSE)%>%
+    layout(showlegend = FALSE)
+
+subplot(fig1, fig2, nrows=1, titleY = TRUE, margin = 0.05) %>%
+    layout( 
+            showlegend = FALSE, 
+            yaxis = list(range = c(0, 110), tickfont = list(size=8)) )
+```
+
 ####__2. Trends__
 
 _(Note: 35 surveys used for the SDP-level data on the left/orange panel. But, only 29 surveys are used for the pop-level data on the right/blue panel, excluding earlier surveys that did not have questions for the cognitive access domain. If needed, data from the earlier surveys can be added.)_ 
 
-```{r plottrend, results='asis', fig.align="left", out.width="900px", out.height="700px"}
+__<span style="color: red;">Among all/any SDPs</span>__
+```{r plottrendAll, results='asis', fig.align="left", out.width="900px", out.height="700px"}
 ############### SDP
 panel <- . %>%
-    plot_ly(x=~round, y=~essential5_curav, type = 'scatter', mode = 'lines',
-            name = "5 specific methods* available currently", 
+    plot_ly(x=~round, y=~essential5_offer, type = 'scatter', mode = 'lines',
+            name = "offer 5 specific methods*",
+            marker = list(color = '#fdd0a2'),
+            line = list(color = '#fdd0a2')) %>%
+    add_trace(y=~essential5_curav, type = 'scatter', mode = 'lines',
+            name = "5 specific methods* available currently",
             marker = list(color = '#fdae6b'),
-            line = list(color = '#fdae6b')) %>%
+            line = list(color = '#fdae6b')) %>%  
     add_trace(y=~essential5_noso, type = 'scatter', mode = 'lines',
             name = "5 specific methods* available currently/3-month", 
             marker = list(color = '#fd8d3c'),
             line = list(color = '#fd8d3c')) %>%    
-    add_trace(y = ~essential5_ready, name = "Currently ready** to provide 5 specific methods*", 
-              marker = list(color = '#f16913'),
-              line = list(color = '#f16913')) %>% 
-    add_trace(y = ~essential5_rnoso, name = "Meeting both conditions", 
-              marker = list(color = '#d94801'),
-              line = list(color = '#d94801')) %>% 
+    add_trace(y = ~essential5_ready, type = 'scatter', mode = 'lines',
+            name = "Currently ready** to provide 5 specific methods*", 
+            marker = list(color = '#f16913'),
+            line = list(color = '#f16913')) %>% 
+    add_trace(y = ~essential5_rnoso, type = 'scatter', mode = 'lines',
+            name = "Meeting both conditions", 
+            marker = list(color = '#d94801'),
+            line = list(color = '#d94801')) %>% 
     add_annotations(
         text = ~unique(country),
         x = 0.5, y = 0.95, xref = "paper", yref = "paper",    
@@ -245,7 +358,7 @@ panel <- . %>%
                          range = c(1, 7), tickfont = list(size=8))
             )
         
-dtafig<-dtaSDP
+dtafig<-dtaSDP%>%filter(group=="All") 
 
 fig1<-dtafig%>%
     group_by(country) %>%
@@ -256,7 +369,11 @@ fig1<-dtafig%>%
 ############### IR
 
 panel <- . %>%
-    plot_ly(x=~round, y=~SDPall_essential5_curav, type = 'scatter', mode = 'lines',
+    plot_ly(x=~round, y=~SDPall_essential5_offer, type = 'scatter', mode = 'lines',
+            name = "offer 5 specific methods*", 
+            marker = list(color = '#9ecae1'),
+            line = list(color = '#9ecae1')) %>%
+    add_trace(y=~SDPall_essential5_curav, type = 'scatter', mode = 'lines',
             name = "5 specific methods* available currently", 
             marker = list(color = '#6baed6'),
             line = list(color = '#6baed6')) %>%
@@ -264,12 +381,14 @@ panel <- . %>%
             name = "5 specific methods* available currently/3-month", 
             marker = list(color = '#4292c6'),
             line = list(color = '#4292c6')) %>%    
-    add_trace(y = ~SDPall_essential5_ready, name = "Currently ready** to provide 5 specific methods*", 
-              marker = list(color = '#2171b5'),
-              line = list(color = '#2171b5')) %>% 
-    add_trace(y = ~SDPall_essential5_rnoso, name = "Meeting both conditions", 
-              marker = list(color = '#084594'),
-              line = list(color = '#084594')) %>% 
+    add_trace(y = ~SDPall_essential5_ready, type = 'scatter', mode = 'lines',
+            name = "Currently ready** to provide 5 specific methods*", 
+            marker = list(color = '#2171b5'),
+            line = list(color = '#2171b5')) %>% 
+    add_trace(y = ~SDPall_essential5_rnoso, type = 'scatter', mode = 'lines',
+            name = "Meeting both conditions", 
+            marker = list(color = '#084594'),
+            line = list(color = '#084594')) %>% 
     add_annotations(
         text = ~unique(country),
         x = 0.5, y = 0.95, xref = "paper", yref = "paper",    
@@ -300,7 +419,260 @@ subplot(fig1, fig2, nrows=1, titleY = TRUE, margin = 0.05) %>%
             )
 ```
 
-####__3. Latest pattern by SES (only for population-based access)__
+__<span style="color: red;">Excluding hospitals: this makes sense for only select countries - probably Burkina Faso, Ethiopia, India/Rajasthan, and Uganda</span>__
+```{r plottrend, results='asis', fig.align="left", out.width="900px", out.height="700px"}
+############### SDP
+panel <- . %>%
+    plot_ly(x=~round, y=~essential5_offer, type = 'scatter', mode = 'lines',
+            name = "offer 5 specific methods*",
+            marker = list(color = '#fdd0a2'),
+            line = list(color = '#fdd0a2')) %>%
+    add_trace(y=~essential5_curav, type = 'scatter', mode = 'lines',
+                name = "5 specific methods* available currently",
+                marker = list(color = '#fdae6b'),
+              line = list(color = '#fdae6b')) %>%
+    add_trace(y=~essential5_noso, type = 'scatter', mode = 'lines',
+            name = "5 specific methods* available currently/3-month", 
+            marker = list(color = '#fd8d3c'),
+            line = list(color = '#fd8d3c')) %>%    
+    add_trace(y = ~essential5_ready, type = 'scatter', mode = 'lines',
+              name = "Currently ready** to provide 5 specific methods*", 
+              marker = list(color = '#f16913'),
+              line = list(color = '#f16913')) %>% 
+    add_trace(y = ~essential5_rnoso, type = 'scatter', mode = 'lines',
+              name = "Meeting both conditions", 
+              marker = list(color = '#d94801'),
+              line = list(color = '#d94801')) %>% 
+    add_annotations(
+        text = ~unique(country),
+        x = 0.5, y = 0.95, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "bottom", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%    
+    layout(
+            yaxis = list(title = "",
+                         range = c(0, 110), tickfont = list(size=8)),
+            xaxis = list(title = "Survey year", 
+                         range = c(1, 7), tickfont = list(size=8))
+            )
+        
+dtafig<-dtaSDP%>%filter(group=="Excluding hospitals") 
+
+fig1<-dtafig%>%
+    group_by(country) %>%
+    do(p = panel(.)) %>%
+    subplot(nrows = 4, shareX = TRUE, shareY = TRUE)%>%
+    layout(showlegend = FALSE)
+
+############### IR
+
+panel <- . %>%
+    plot_ly(x=~round, y=~SDPlow_essential5_offer, type = 'scatter', mode = 'lines',
+            name = "Offer 5 specific methods*", 
+            marker = list(color = '#9ecae1'),
+            line = list(color = '#9ecae1')) %>%
+    add_trace(y=~SDPlow_essential5_curav, type = 'scatter', mode = 'lines',
+            name = "5 specific methods* available currently", 
+            marker = list(color = '#6baed6'),
+            line = list(color = '#6baed6')) %>%
+    add_trace(y=~SDPlow_essential5_noso, type = 'scatter', mode = 'lines',
+            name = "5 specific methods* available currently/3-month", 
+            marker = list(color = '#4292c6'),
+            line = list(color = '#4292c6')) %>%    
+    add_trace(y = ~SDPlow_essential5_ready, name = "Currently ready** to provide 5 specific methods*", 
+              marker = list(color = '#2171b5'),
+              line = list(color = '#2171b5')) %>% 
+    add_trace(y = ~SDPlow_essential5_rnoso, name = "Meeting both conditions", 
+              marker = list(color = '#084594'),
+              line = list(color = '#084594')) %>% 
+    add_annotations(
+        text = ~unique(country),
+        x = 0.5, y = 0.95, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "bottom", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%    
+    layout(
+            yaxis = list(title = "",
+                         range = c(0, 110), tickfont = list(size=8)),
+            xaxis = list(title = "Survey year", 
+                         range = c(1, 7), tickfont = list(size=8))
+            )
+        
+dtafig<-dtaIR%>%
+    filter(group=="All")%>%
+    filter(is.na(SDPlow_essential5_noso)==FALSE)
+
+fig2<-dtafig%>%
+    group_by(country) %>%
+    do(p = panel(.)) %>%
+    subplot(nrows = 4, shareX = TRUE, shareY = TRUE)%>%
+    layout(showlegend = FALSE)
+
+subplot(fig1, fig2, nrows=1, titleY = TRUE, margin = 0.05) %>%
+    layout( showlegend = FALSE, 
+            xaxis = list(title="Survey round"),
+            yaxis = list(range = c(0, 110), tickfont = list(size=8))
+            )
+```
+
+####__3. SDP vs. Pop-based estimates__
+
+Pop-based estimates of access to methods are always higher than SDP-level estimates of method availability. This section examines any pattern across countries (because of different health systems, includng the role/significance of hospitals).        
+
+Pairs to the right side has more strict definitions of access.   
+* __offer__: All five methods offered        
+* __curav__: All five methods currently available    
+* __noso__: All five methods currently available + no stock out in the past 3 months for any of the five methods    
+* __ready__: All five methods currently available + SDP is _ready to insert and remove_ IUD and Implants    
+* __rnoso__: All five methods currently available + no stock out in the past 3 months for any of the five methods + SDP is _"ready" to insert and remove_ IUD and Implants   
+
+__<span style="color: red;">Among all/any SDPs</span>__
+```{r ratioALL, results='asis', fig.align="left", out.width="600px", out.height="400px"}
+tempSDP<-dtaSDP%>%filter(group=="All")%>%
+    select(-country, -countrycode, -year, -month, -yearmonth, -cmc, -group)
+    
+tempIR<-dtaIR%>%filter(group=="All"& groupdemand==0)%>%
+    select(-starts_with("SDPlow")) 
+
+dtafig<-left_join(tempSDP, tempIR, by=c("xsurvey"))%>%
+    filter(is.na(essential5_offer)==FALSE & is.na(SDPall_essential5_offer)==FALSE)  
+
+layoutlist<-list(autosize = F, width = 200, height = 200, 
+                 xaxis = list(title = "SDP-level ", 
+                              range = c(0, 100), tickfont = list(size=8)), 
+                 yaxis = list(title = "Population-level",
+                              range = c(0, 110), tickfont = list(size=8)),
+                 showlegend=FALSE)
+
+fig1<-dtafig%>%
+    plot_ly(x = ~essential5_offer, y = ~SDPall_essential5_offer, color = ~country)%>%
+    add_annotations(
+        text = "offer", x = 0.75, y = 0.25, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "center", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%
+    layout(layoutlist)
+
+fig2<-dtafig%>%
+    plot_ly(x = ~essential5_curav, y = ~SDPall_essential5_curav, color = ~country)%>%
+    add_annotations(
+        text = "curav", x = 0.75, y = 0.25, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "center", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%
+    layout(layoutlist)
+
+fig3<-dtafig%>%
+    plot_ly(x = ~essential5_ready, y = ~SDPall_essential5_ready, color = ~country)%>%
+    add_annotations(
+        text = "ready", x = 0.75, y = 0.25, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "center", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%
+    layout(layoutlist)
+
+fig4<-dtafig%>%
+    plot_ly(x = ~essential5_noso, y = ~SDPall_essential5_noso, color = ~country)%>%
+    add_annotations(
+        text = "noso", x = 0.75, y = 0.25, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "center", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%
+    layout(layoutlist)
+
+fig5<-dtafig%>%
+    plot_ly(x = ~essential5_rnoso, y = ~SDPall_essential5_rnoso, color = ~country)%>%
+    add_annotations(
+        text = "rnoso", x = 0.75, y = 0.25, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "center", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%
+    layout(layoutlist)
+
+subplot(fig1, fig2, fig3, fig4, fig5, 
+        nrows = 2, shareX = FALSE, shareY = TRUE)%>%
+    layout( 
+            xaxis = list(title = "SDP-level ", 
+                              range = c(0, 100), tickfont = list(size=8)), 
+            yaxis = list(title = "Population-level",
+                              range = c(0, 110), tickfont = list(size=8)),
+            showlegend=FALSE)
+```
+
+__<span style="color: red;">Excluding hospitals: this makes sense for only select countries - probably Burkina Faso, Ethiopia, India/Rajasthan, and Uganda</span>__
+```{r ratioLOW, results='asis', fig.align="left", out.width="1100px", out.height="200px"}
+tempSDP<-dtaSDP%>%filter(group!="All")%>%
+    select(-country, -countrycode, -year, -month, -yearmonth, -cmc, -group)
+    
+tempIR<-dtaIR%>%filter(group=="All"& groupdemand==0)%>%
+    select(-starts_with("SDPall")) 
+
+dtafig<-left_join(tempSDP, tempIR, by=c("xsurvey"))%>%
+    filter(is.na(essential5_offer)==FALSE & is.na(SDPlow_essential5_offer)==FALSE)  
+
+layoutlist<-list(autosize = F, width = 200, height = 200, 
+                 xaxis = list(title = "SDP-level ", 
+                              range = c(0, 100), tickfont = list(size=8)), 
+                 yaxis = list(title = "Population-level",
+                              range = c(0, 110), tickfont = list(size=8)),
+                 showlegend=FALSE)
+
+fig1<-dtafig%>%
+    plot_ly(x = ~essential5_offer, y = ~SDPlow_essential5_offer, color = ~country)%>%
+    add_annotations(
+        text = "offer", x = 0.75, y = 0.25, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "center", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%
+    layout(layoutlist)
+
+fig2<-dtafig%>%
+    plot_ly(x = ~essential5_curav, y = ~SDPlow_essential5_curav, color = ~country)%>%
+    add_annotations(
+        text = "curav", x = 0.75, y = 0.25, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "center", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%
+    layout(layoutlist)
+
+fig3<-dtafig%>%
+    plot_ly(x = ~essential5_ready, y = ~SDPlow_essential5_ready, color = ~country)%>%
+    add_annotations(
+        text = "ready", x = 0.75, y = 0.25, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "center", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%
+    layout(layoutlist)
+
+fig4<-dtafig%>%
+    plot_ly(x = ~essential5_noso, y = ~SDPlow_essential5_noso, color = ~country)%>%
+    add_annotations(
+        text = "noso", x = 0.75, y = 0.25, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "center", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%
+    layout(layoutlist)
+
+fig5<-dtafig%>%
+    plot_ly(x = ~essential5_rnoso, y = ~SDPlow_essential5_rnoso, color = ~country)%>%
+    add_annotations(
+        text = "rnoso", x = 0.75, y = 0.25, xref = "paper", yref = "paper",    
+        xanchor = "center", yanchor = "center", showarrow = FALSE,
+        font = list(size = 10)
+        ) %>%
+    layout(layoutlist)
+
+subplot(fig1, fig2, fig3, fig4, fig5, 
+        nrows = 1, shareX = FALSE, shareY = TRUE)%>%
+    layout( 
+            xaxis = list(title = "SDP-level ", 
+                              range = c(0, 100), tickfont = list(size=8)), 
+            yaxis = list(title = "Population-level",
+                              range = c(0, 110), tickfont = list(size=8)),
+            showlegend=FALSE)
+```
+
+####__4. Latest pattern by SES (only for population-based access)__
 
 Across countries, population-level access to methods does not have a common pattern with background SES, unlike other access metrics (e.g., cognitive).  
 
@@ -308,14 +680,19 @@ Across countries, population-level access to methods does not have a common patt
 * There is a negative association (e.g., Uganda), potentially because of: more programming in disadvantaged areas, supply not meeting demand in areas with more users proportionately, etc.    
 * In some cases, there is a positive association (e.g., Cote d'Ivoire, Kinshasa, and Niger).    
 
-#####__3.1. By education: < vs. >= ever attended secondary school__
+
+####__4.1. By education: < vs. >= ever attended secondary school__
 
 ```{r plotpattern1, results='asis', fig.align="left", out.width="900px", out.height="700px"}
 panel <- . %>%
-    plot_ly(x=~grouplabel, y=~SDPall_essential5_curav, type = 'bar', 
+    plot_ly(x=~grouplabel, y=~SDPall_essential5_offer, type = 'bar', 
+                name = "Offer 5 specific methods*", 
+                marker = list(color = '#9ecae1'),
+                text = ~SDPall_essential5_offer, textfont = list(size = 10) , textposition = 'outside') %>%
+    add_trace(x=~grouplabel, y=~SDPall_essential5_curav, type = 'bar', 
                 name = "5 specific methods* available currently", 
                 marker = list(color = '#6baed6'),
-                text = ~SDPall_essential5_curav, textfont = list(size = 10) , textposition = 'outside') %>%
+                text = ~SDPall_essential5_curav, textfont = list(size = 10) , textposition = 'outside') %>%    
     add_trace(y=~SDPall_essential5_noso, type = 'bar', 
                 name = "5 specific methods* available currently/3-month", 
                 marker = list(color = '#4292c6'),
@@ -347,12 +724,12 @@ dtafig<-dtaIR%>%
 dtafig%>%
     group_by(country) %>%
     do(p = panel(.)) %>%
-    subplot(nrows = 4, shareY = FALSE)%>%
+    subplot(nrows = 5, shareY = FALSE)%>%
     layout(showlegend = FALSE, 
            title=c(""))        
 ```
 
-#####__3.2. By HH wealth: bottom 2 vs. top 3 quintiles__
+####__4.2. By HH wealth: bottom 2 vs. top 3 quintiles__
 
 ```{r plotpattern2, results='asis', fig.align="left", out.width="900px", out.height="700px"}
 
@@ -361,12 +738,12 @@ dtafig<-dtaIR%>%filter(latestIRLINK==1 & group=="HH wealth")
 dtafig%>%
     group_by(country) %>%
     do(p = panel(.)) %>%
-    subplot(nrows = 4, shareY = FALSE)%>%
+    subplot(nrows = 5, shareY = FALSE)%>%
     layout(showlegend = FALSE, 
            title=c(""))   
 ```
 
-#####__3.3. By residential area: rural vs. urban__
+####__4.3. By residential area: rural vs. urban__
 
 ```{r plotpattern3, results='asis', fig.align="left", out.width="900px", out.height="700px"}
 
@@ -375,13 +752,13 @@ dtafig<-dtaIR%>%filter(latestIRLINK==1 & group=="Residential area")
 dtafig%>%
     group_by(country) %>%
     do(p = panel(.)) %>%
-    subplot(nrows = 4, shareY = FALSE)%>%
+    subplot(nrows = 5, shareY = FALSE)%>%
     layout(showlegend = FALSE, 
            title=c(""))  
         
 ```
 
-####__4. Latest pattern of MCPR by indicator (only for population-based access)__
+####__5. Latest pattern of MCPR by indicator (only for population-based access)__
 
 As expected, based on its inconsistent association with women's background characteristics, there is no common pattern with MCPR. 
 
@@ -390,6 +767,7 @@ MCPR (%) on the Y axis.
 * Blue bar: MCPR among women __with__ access to the methods.   
 
 Pairs to the right side has more strict definitions of access.   
+* __offer__: All five methods offered        
 * __curav__: All five methods currently available    
 * __noso__: All five methods currently available + no stock out in the past 3 months for any of the five methods    
 * __ready__: All five methods currently available + SDP is _ready to insert and remove_ IUD and Implants    
@@ -415,13 +793,15 @@ panel <- . %>%
         )
 
 dtafig<-dtaIR%>%
-    filter((group=="By SDPall_essential5_curav"|
+    filter((group=="By SDPall_essential5_offer"|
+            group=="By SDPall_essential5_curav"|
             group=="By SDPall_essential5_noso"|
             group=="By SDPall_essential5_ready"|
             group=="By SDPall_essential5_rnoso") & 
     latestIRLINK==1)%>%
     select(xsurvey, mcp, country, group, grouplabel)%>%
     mutate(
+        group=ifelse(group=="By SDPall_essential5_offer", "offer", group),
         group=ifelse(group=="By SDPall_essential5_curav", "curav", group),
         group=ifelse(group=="By SDPall_essential5_noso", "noso", group),
         group=ifelse(group=="By SDPall_essential5_ready", "ready", group),
@@ -430,12 +810,12 @@ dtafig<-dtaIR%>%
 
 dtafig$group<-fct_relevel(
     factor(dtafig$group, levels = unique(dtafig$group)),
-    c("curav", "noso", "ready", "rnoso"))
+    c("offer", "curav", "noso", "ready", "rnoso"))
         
 dtafig%>%
     group_by(country) %>%
     do(p = panel(.)) %>%
-    subplot(nrows = 4, shareY = FALSE, margin = 0.02)%>%
+    subplot(nrows = 5, shareY = FALSE, margin = 0.02)%>%
     layout(showlegend = FALSE, 
            title=c(""))  
 ```
